Bugfixes for ADC manager and display manager

--- a/adc_manager/systemd/adc_manager.service
+++ b/adc_manager/systemd/adc_manager.service
@@ -9,5 +9,5 @@ ExecStart=/user/bin/python3 /usr/bin/adc_manager/adc_manager.py
 Restart=always
 User=pi
 
-[install]
-Wantedby=multi-user.target
+[Install]
+WantedBy=multi-user.target
